test: create unit test in userService

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "collectCoverage": true,
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
